--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     --color-success: #36d39a;
     --color-warning: #fbbe23;
     --color-error: #f87171;
+    --color-editing: #50abfa;
 
 }
 
@@ -75,6 +76,7 @@ button:hover {
     width: 100%;
     display: flex;
     justify-content: space-between;
+
 }
 
 #delete-button {
@@ -105,6 +107,7 @@ tbody td {
     background-color: var(--color-task);
     padding: 5px 10px;
     text-align: center;
+    width: 25%;
 }
 
 tbody td button {
@@ -118,10 +121,15 @@ tbody td button:nth-child(1) {
 
 tbody td button:nth-child(2) {
     background-color: var(--color-success);
+    width: 48px;
 }
 
 tbody td button:nth-child(3) {
     background-color: var(--color-error);
+}
+
+tbody td button:nth-child(5) {
+    background-color: var(--color-editing);
 }
 
 #alert-message {
@@ -145,4 +153,13 @@ tbody td button:nth-child(3) {
 
 .alert-error {
     background-color: var(--color-error);
+}
+
+.alert-editing {
+    background-color: var(--color-editing);
+}
+
+#edit-button {
+    display: none;
+    background-color: var(--color-editing)
 }
